--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "printers-front",
   "version": "0.1.0",
+  "main": "./src/index.js",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -17,10 +19,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +47,7 @@
     "@babel/core": "^7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/preset-env": "^7.1.0"
+    "@babel/preset-env": "^7.1.0",
+    "electron": "^9.0.5"
   }
 }
