--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "electron .",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
